[gd_scene load_steps=7 format=3 uid="uid://c08g4pan38n7l"]

[ext_resource type="Texture2D" uid="uid://wlqjc32sx6re" path="res://player/player.svg" id="1"]
[ext_resource type="Script" path="res://player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c3qr2pouoj011" path="res://player/player_swimming.svg" id="2_sxni1"]
[ext_resource type="Texture2D" uid="uid://ce5cnseaqrn4b" path="res://player/stamina_bg.svg" id="4_ror7t"]
[ext_resource type="Texture2D" uid="uid://csdnwrhkmnn0o" path="res://player/stamina.svg" id="5_8nacs"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 16.0
height = 53.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -26)
collision_layer = 2
collision_mask = 0
script = ExtResource("2")
water_texture = ExtResource("2_sxni1")
land_texture = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("1")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("1")

[node name="Stamina" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -44.0
offset_right = 44.0
offset_bottom = -24.0
grow_vertical = 0
value = 100.0
fill_mode = 4
texture_under = ExtResource("4_ror7t")
texture_progress = ExtResource("5_8nacs")
metadata/_edit_use_anchors_ = true

[node name="DPS" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="DPS" to="." method="_on_dps_timeout"]
